# fullstack-langgraph-deepsearch

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.roo/: mcp.json
backend/: .env.example  README.md  pyproject.toml
backend/src/: main.py
backend/src/routers/: search.py
backend/src/routers/chat_agent/: api.py  workflow.py
backend/src/routers/search_agent/: __init__.py  api.py  config.py  constants.py  models.py  nodes.py  prompts.py  workflow.py
backend/src/utils/: constants.py  helpers.py  logger.py  prompts.py  usage.py
frontend/: .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  Home.jsx  WebSearch.jsx  style.css
frontend/src/components/: ActivityTimeline.jsx  ChatMessagesView.jsx  HistoryDrawer.jsx  InputForm.jsx  JsonRender.jsx  MarkdownView.jsx  WebSearchCard.jsx  WelcomeScreen.jsx
frontend/src/components/ui/: scroll-area.jsx
frontend/src/hooks/: useBasicChat.js  useChat.js
frontend/src/lib/: homeHelpers.js
frontend/src/pages/: Chat.jsx  DeepSearch.jsx  WebSearch.jsx
